# django_inertia

./: .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
django_inertia/: asgi.py  inertia_share.py  settings.py  urls.py  wsgi.py
static/js/: app.js
static/js/components/: Form.vue  Index.vue  Layout.vue
templates/: base.html
test_app/: urls.py  views.py
test_app/templates/test_app/: index.html
